<resources>
    <string name="app_name">اي‌مول</string>

    <string name="mobileNumber">شماره موبایل</string>
    <string name="password">رمزعبور</string>
    <string name="forgotPassword">!نست کلمة الورود</string>
    <string name="createUser">لیس لدیک الحساب حتی الآن؟</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="singUp">تسجیل الدخول</string>
    <string name="signIn">دخول</string>
    <string name="addToShoppingCart">إضف بالسلة</string>
    <string name="confirm">تأیید</string>
    <string name="email">پست الکترونیکی</string>
    <string name="address">آدرس</string>
    <string name="amount">تعداد</string>
    <string name="closeDialog">بستن</string>
    <string name="title">عنوان</string>
    <string name="desc">توضیح</string>
    <string name="prev">قبلی</string>
    <string name="next">بعدی</string>
    <string name="startApp">شروع</string>
    <string name="delete">حذف</string>
    <string name="messageNotFond">موردی یافت نشد</string>
    <string name="activeLocation">فعال</string>
    <string name="tryAgain">سعی مجدد</string>

    <string name="invalidFamily">نام خانوادگی خود را وارد نمایید</string>
    <string name="invalidEmail">ایمیل به درستی وارد نشده است</string>
    <string name="invalidAddress">آدرس خود را روی نقشه انتخاب کنید</string>
    <string name="invalidLogin">ابتدا وارد حساب کاربری خود شوید</string>
    <string name="messageEmptyName">نام خود را وارد نمایید</string>
    <string name="messageFormatMobile">شماره موبایل به درستی وارد نشده است</string>
    <string name="messageEmptyPassword">رمزعبور خود را وارد نمایید</string>
    <string name="messageOnLocation">لطفا GPS خود را فعال کنید</string>
    <string name="messageSelectLocation">لطفا مکان خود را روی نقشه انتخاب کنید</string>
    <string name="messageEmptyMobile">تلفن همراه خود را وارد نمایید</string>
    <string name="messageAddToCart">با موفقیت به سبد اضافه شد</string>

    <string name="menu_user">ورود/ثبت نام</string>
    <string name="menu_profile">پروفایل</string>
    <string name="menu_invoice">فاکتور</string>
    <string name="menu_preInvoice">پیش فاکتور</string>
    <string name="menu_question">سوالی دارید؟</string>
    <string name="menu_info">درباره ما</string>
    <string name="menu_content">تماس با ما</string>
    <string name="menu_exit">خروج از حساب کاربری</string>

    <string name="contentDescription">من صفحة المنتج الرئيسيةمن صفحة المنتج الرئيسية من صفحة المنتج الرئيسية من صفحة المنتج الرئيسيةمن صفحة المنتج الرئيسيةمن صفحة المنتج الرئيسية من صفحة المنتج الرئيسيةمن صفحة المنتج الرئيسية من صفحة المنتج الرئيسية من صفحة المنتج الرئيسيةمن صفحة المنتج الرئيسيةمن صفحة المنتج الرئيسية</string>
    <string name="contentTitle">تیتر درباره ی ما</string>
    <string name="contentTel">+078000000</string>

    <string name="invoiceItem_number">تسلسل</string>
    <string name="invoiceItem_status">حالة</string>
    <string name="invoiceItem_amount">تعداد</string>
    <string name="invoiceItem_discount">تخفیف</string>
    <string name="invoiceItem_total">مجموع</string>
    <string name="invoiceItem_date">تاریخ</string>
    <string name="questionEndShopping">نهایی کردن خرید</string>
    <string name="messageEndShopping">خرید شما انجام شد. با شما تماس میگیریم</string>
    <string name="changeAddress">تغییر آدرس</string>
    <string name="selectAddress">انتخاب آدرس</string>
    <string name="edit">ویرایش</string>
    <string name="endBuy">نهایی کردن خرید</string>

</resources>