<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.LoginActivity">

    <data class="LoginBinding">

        <variable
            name="activity"
            type="android.app.Activity" />

        <variable
            name="vm"
            type="com.majazeh.emall.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLightColor">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="@{() -> activity.onBackPressed()}"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@drawable/app_logo_main"
            app:layout_constraintBottom_toTopOf="@+id/inputMobileNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0123456789"
                android:gravity="right|center_vertical"
                android:hint="@string/mobileNumber"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/black"
                android:textColorHint="@color/medium"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toBottomOf="@+id/inputMobileNumber"
            app:startIconDrawable="@drawable/ic_eye_invisible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                app:onOkInSoftKeyboard="@{() -> vm.login()}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/medium"
                android:textSize="14sp"
                app:textInputLayoutFocusedRectEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/forgotPassword"
            android:textColor="@color/medium"
            android:textSize="13sp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="@id/inputPassword"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword"
            android:focusable="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.login()}"
            android:text="@string/signIn"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:backgroundTint="@color/primaryColor"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword"
            app:rippleColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/createUser"
            android:textColor="@color/medium"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>