<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="ItemInvoiceBinding">

        <import type="android.view.View" />

        <variable
            name="position"
            type="Integer" />

        <variable
            name="item"
            type="com.majazeh.emall.data.api.response.Invoice" />

        <variable
            name="vm"
            type="com.majazeh.emall.viewmodel.InvoiceViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainTitleInvoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:visibility="@{position == 0 ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitleNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/invoiceItem_number"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.120" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitleStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/invoiceItem_status"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/txtTitleNumber"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.180" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitleAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/invoiceItem_amount"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/txtTitleStatus"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.10" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitlePercent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/invoiceItem_discount"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtTitleAmount"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.140" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitleTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/invoiceItem_total"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtTitlePercent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.120" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/invoiceItem_date"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/txtTitleTotal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainDescInvoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constrainTitleInvoice">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@{String.valueOf(position + 1)}"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.120"
                tools:text="تسلسل" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@{item.status}"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtNumber"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.180"
                tools:text="حالة" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@{String.valueOf(item.products)}"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtStatus"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.10"
                tools:text="تعداد" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPercent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text='@{item.discount != null ? String.valueOf(item.discount) : "0" }'
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtAmount"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.140"
                tools:text="تخفیف" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@{String.valueOf(item.total)}"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtPercent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.120"
                tools:text="مجموع" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@{item.updated_at}"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtTotal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="تاریخ" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
