<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.ContentActivity">

    <data class="ContentBinding"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:theme="@style/Theme.Emall.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:statusBarScrim="@color/primaryColor"
                app:scrimAnimationDuration="500"
                android:background="@color/primaryColor"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivProduct"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="?actionBarSize"
                    app:layout_collapseMode="parallax"
                    android:src="@drawable/online_shopping"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetEnd="0dp"
                    app:contentInsetStart="0dp"
                    app:menu="@menu/main"
                    android:background="@color/primaryColor"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.Emall.PopupOverlay">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="48dp"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </com.google.android.material.appbar.MaterialToolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>



        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/rclInvoice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/app_logo_main"/>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/ivLogo"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:cardCornerRadius="16dp"
                    app:cardUseCompatPadding="true"
                    app:cardPreventCornerOverlap="false"
                    app:cardElevation="3dp"
                    app:contentPadding="8dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/contentTitle"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:padding="8dp"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/contentDescription"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:padding="8dp"/>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical|right">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/contentTel"
                                android:textSize="14sp"
                                android:textColor="@color/black"
                                android:gravity="right|center"/>

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                app:srcCompat="@drawable/ic_mobile"
                                android:layout_margin="8dp"/>
                        </androidx.appcompat.widget.LinearLayoutCompat>


                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>